--- a/page11.html
+++ b/page11.html
@@ -72,7 +72,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-7" href="7-steps.html"><strong>7 Step Process</strong></a> <a class="btn btn-sm btn-primary display-7" href="page11.html">20 Responsibility Issues<strong></strong></a> <a class="btn btn-sm btn-primary display-7" href="about.html"><strong>About</strong></a> <a class="btn btn-sm btn-success display-7" href="get-started.html"><strong>Get Started</strong></a></div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-7" href="7-steps.html"><strong>7 Step Process</strong></a> <a class="btn btn-sm btn-primary display-7" href="page11.html"><strong>20 Responsibility Issues</strong><strong></strong></a> <a class="btn btn-sm btn-primary display-7" href="about.html"><strong>About</strong></a> <a class="btn btn-sm btn-secondary display-7" href="get-started.html"><strong>Get Started</strong></a></div>
         </div>
     </nav>
 </section>
@@ -97,7 +97,7 @@
     <div class="container">
         <div class="media-container-row">
             <div class="mbr-text col-12 mbr-fonts-style display-5 col-md-12"><div>
-</div><div>Responsible 100 currently explores 20 separate issues across 8 broad categories as follows:</div><div><br></div><div><strong>Community
+</div><div>Responsible 100 currently explores 20 separate issues across 8 broad categories. Click the links to explore the issues:</div><div><br></div><div><strong>Community
 </strong></div><div>Local Communities
 </div><div><a href="https://trumpet.app/pods/62bdcd643665a8ff0c2e9e23/live" class="text-primary">Causes &amp; Campaigns</a></div><div><br></div><div>
 </div><div><strong>Environment
@@ -245,7 +245,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/z" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Web page <a href="https://mobirise.site/f" style="color:#aaa;">was started</a> with Mobirise</p></section><script src="assets/popper/popper.min.js"></script>  <script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/g" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Mobirise web software - <a href="https://mobirise.site/p" style="color:#aaa;">Read more</a></p></section><script src="assets/popper/popper.min.js"></script>  <script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 <input name="cookieData" type="hidden" data-cookie-customDialogSelector='null' data-cookie-colorText='#424a4d' data-cookie-colorBg='rgba(234, 239, 241, 0.99)' data-cookie-textButton='Agree' data-cookie-colorButton='' data-cookie-colorLink='#424a4d' data-cookie-underlineLink='true' data-cookie-text="We use cookies to give you the best experience. Read our <a href='privacy.html'>cookie policy</a>.">
