--- a/about.html
+++ b/about.html
@@ -210,7 +210,7 @@
     <div class="container">
         <div class="media-container-row">
             <div class="mbr-text col-12 mbr-fonts-style display-5 col-md-12"><div>
-</div><div>As Graeme Mackay's brilliant cartoon below illustrates, there is something inherently futile about "doing CSR" or displaying an ethics badge in the light of the multitude of existential crises we face, which only seem to get worse with each passing day.</div><div>
+</div><div>As Graeme Mackay's brilliant cartoon below illustrates, there is something inherently futile about "doing CSR", or displaying an ethics badge, in the light of the multitude of existential crises we face, which only seem to get worse with each passing day.</div><div>
 </div><div> 
 </div><div>
 </div><div> 
@@ -312,7 +312,7 @@
     <div class="container">
         <div class="media-container-row">
             <div class="mbr-text col-12 mbr-fonts-style display-5 col-md-12"><div>
-</div><div>So our take is simple: truly responsible business must be about systems change. Nothing less will do. And to achieve this, real responsibility must drive profitability, and irresponsible practices must destroy profitability. In this, we all have our roles to play.&nbsp;</div><div><br></div><div>Responsible 100 is designed to enable any business to do everything it can to increase its positive impacts on people and planet, and decrease its negative impacts, as far, fast and wide as possible, according to its own particular needs and circumstances. And it is designed to enable all&nbsp;<span style="font-size: 1.5rem;">those consumers, employees and investors who support this unequivocal approach to responsibility, and would have these businesses succeed at the expense of the laggards and greenwashers.</span></div><div>
+</div><div>Responsible 100 is designed to enable any business or organisation to do everything it can to increase its positive impacts on people and planet, and decrease its negative impacts, as far, fast and wide as possible, according to its own particular needs and circumstances. And it is designed to enable all those consumers, employees and investors who support this unequivocal approach to responsibility, and would have these businesses succeed at the expense of the laggards and greenwashers.</div><div><br></div><div>So our definition is simple: truly responsible business must be about systems change. Nothing less will do. And to achieve this, real responsibility must drive profitability, and irresponsible practices must destroy profitability. And to create this better system, we all have our roles to play.</div><div>
 </div><div> 
 </div><div>
 </div><div> 
@@ -369,7 +369,7 @@
         <div class="media-container-row">
             <div class="mbr-text col-12 mbr-fonts-style display-5 col-md-12"><div>
 </div><div>Any company - whose business model does not depend on offloading costs on to society and the environment or exploiting stakeholders - can meet the responsibility test that our <a href="7-steps.html" class="text-primary">7 Steps</a> present.</div><div><br></div><div>Responsible 100 enables a business or organisation to:
-</div><div><br></div><div>++&nbsp; &nbsp;Start on its responsibility journey right away, no matter its size, sector or starting point
+</div><div><br></div><div>++&nbsp; &nbsp;Join right away, no matter its size, sector or starting point
 </div><div><br></div><div>++&nbsp; &nbsp;Adopt the best social, environmental and ethical practices it possibly can, bespoke to its own particular needs and circumstances
 </div><div><br></div><div>++&nbsp; &nbsp;Find the optimal balance between delivering goods and services at the right price and quality on one hand, and contributing to people, planet and future generations on the other
 </div><div><br></div><div>++&nbsp; &nbsp;Practice 'responsibility as a skill', i.e. become more familiar with responsibility challenges and more adept at responding to them, become more comfortable, confident, experienced and capable, and thus take bigger, bolder steps to further improve, especially as its improved responsibility performance translates into commercial benefits
@@ -428,7 +428,7 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text col-12 mbr-fonts-style display-5 col-md-12"><p><strong>5. What is Responsible 100's basic business model?</strong></p></div>
+            <div class="mbr-text col-12 mbr-fonts-style display-5 col-md-12"><p><strong>5. What is Responsible 100's basic business model and fees?</strong></p></div>
         </div>
     </div>
 </section>
@@ -440,7 +440,7 @@
     <div class="container">
         <div class="media-container-row">
             <div class="mbr-text col-12 mbr-fonts-style display-5 col-md-12"><div>
-</div><div>Businesses and organisations pay to participate. Partner organisations collaborate under various agreements including revenue share.&nbsp;</div><div><br></div><div>All the Responsible 100 benchmarks and all the knowledge contained therein, in addition to most workshops delivered by partner organisations, are provided to participants as part of a monthly subscription fee package, see details below.&nbsp; &nbsp;</div><div><br></div><div>Participation requires minimum time investments from the participant business or organisation. Costs are based on the amount of time Responsible 100's team and partners dedicate to the participant.&nbsp;</div><div>
+</div><div>Businesses and organisations pay to participate. Partner organisations collaborate under various agreements including revenue share.&nbsp;</div><div><br></div><div>All the Responsible 100 benchmarks and all the knowledge contained therein, in addition to most workshops delivered by partner organisations, are provided to participants as part of a monthly subscription fee package.&nbsp; &nbsp;</div><div><br></div><div>Participation requires minimum time investments from the participant business or organisation. Costs are based on the amount of time Responsible 100's team and partners dedicate to the participant.&nbsp;</div><div>
 </div><div> 
 </div><div>
 </div><div> 
@@ -474,17 +474,6 @@
 </div><div>
 </div><div>
 </div></div>
-        </div>
-    </div>
-</section>
-
-<section class="mbr-section article content1 cid-t1szEZWLDG" id="content1-ib">
-    
-     
-
-    <div class="container">
-        <div class="media-container-row">
-            <div class="mbr-text col-12 mbr-fonts-style display-5 col-md-12"><p><strong>6. What are the participation fees?</strong></p></div>
         </div>
     </div>
 </section>
@@ -616,7 +605,7 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text col-12 mbr-fonts-style display-5 col-md-12"><p><strong>7. How can I join Responsible 100?</strong></p></div>
+            <div class="mbr-text col-12 mbr-fonts-style display-5 col-md-12"><p><strong>6. How can I join Responsible 100?</strong></p></div>
         </div>
     </div>
 </section>
@@ -676,7 +665,7 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text col-12 mbr-fonts-style display-5 col-md-12"><p><strong>8. Who is behind Responsible 100?</strong></p></div>
+            <div class="mbr-text col-12 mbr-fonts-style display-5 col-md-12"><p><strong>7. Who is behind Responsible 100?</strong></p></div>
         </div>
     </div>
 </section>
@@ -690,8 +679,7 @@
             <div class="mbr-text col-12 mbr-fonts-style display-5 col-md-12"><div>
 </div><div>Responsible 100 is delivered by Profit Through Ethics Ltd an independent, for-profit, impact business based in London, UK.
 </div><div><br></div><div><strong>Michael Solomon, Director
-</strong></div><div><br></div><div>Michael devised the Responsible 100 concept in 2012 having worked on various forerunning initiatives prior. He has over 21 years of experience in innovation and entrepreneurship in responsible business.&nbsp;<span style="font-size: 1.5rem;">View </span><a href="http://www.linkedin.com/pub/michael-solomon/9/537/443" class="text-primary" style="font-size: 1.5rem; background-color: rgb(255, 255, 255);">Michael’s profile on LinkedIn</a><span style="font-size: 1.5rem;">.</span></div><div><br></div><div><strong>Malcolm Bacchus, Adviser &amp; Virtual Finance Director
-</strong></div><div><br></div><div>Malcolm is a Chartered Accountant, a company director, an ICAEW Council Member, Vice President of the ICAEW, and an adviser to SMEs on financing, budgeting, strategy and general management issues.&nbsp;<span style="font-size: 1.5rem;">View </span><a href="https://www.linkedin.com/in/malcolm-bacchus-272b5113/" class="text-primary" style="font-size: 1.5rem; background-color: rgb(255, 255, 255);">Malcolm’s profile on LinkedIn</a><span style="font-size: 1.5rem;">.</span></div><div><br></div><div><strong>Andrea Simonetti, Developer
+</strong></div><div><br></div><div>Michael devised the Responsible 100 concept in 2012 having worked on various forerunning initiatives prior. He has over 21 years of experience in innovation and entrepreneurship in responsible business.&nbsp;<span style="font-size: 1.5rem;">View </span><a href="http://www.linkedin.com/pub/michael-solomon/9/537/443" class="text-primary" style="font-size: 1.5rem; background-color: rgb(255, 255, 255);">Michael’s profile on LinkedIn</a><span style="font-size: 1.5rem;">.</span></div><div><br></div><div><strong>Malcolm Bacchus,&nbsp; 'Virtual Finance Director'</strong></div><div><br></div><div>Malcolm is a Chartered Accountant, a company director, an ICAEW Council Member, Vice President of the ICAEW, and an adviser to SMEs on financing, budgeting, strategy and general management issues.&nbsp;<span style="font-size: 1.5rem;">View </span><a href="https://www.linkedin.com/in/malcolm-bacchus-272b5113/" class="text-primary" style="font-size: 1.5rem; background-color: rgb(255, 255, 255);">Malcolm’s profile on LinkedIn</a><span style="font-size: 1.5rem;">.</span></div><div><br></div><div><strong>Andrea Simonetti, Developer
 </strong></div><div><br></div><div>Andrea is a devops manager with 13 years experience in commercial applications of data science and technology. He is an ad industry specialist focusing on ad targeting and campaigns performance.&nbsp;<span style="font-size: 1.5rem;">View </span><a href="https://www.linkedin.com/in/andrea-simonetti-16a5a835/" class="text-primary" style="font-size: 1.5rem; background-color: rgb(255, 255, 255);">Andrea’s profile on LinkedIn</a><span style="font-size: 1.5rem;">.</span></div><div> 
 </div><div>
 </div><div> 
@@ -809,7 +797,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/f" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Mobirise page software - <a href="https://mobirise.site/n" style="color:#aaa;">Check it</a></p></section><script src="assets/popper/popper.min.js"></script>  <script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/datatables/jquery.data-tables.min.js"></script>  <script src="assets/datatables/data-tables.bootstrap4.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/t" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Built with Mobirise <a href="https://mobirise.site/u" style="color:#aaa;">web</a> theme</p></section><script src="assets/popper/popper.min.js"></script>  <script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/datatables/jquery.data-tables.min.js"></script>  <script src="assets/datatables/data-tables.bootstrap4.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 <input name="cookieData" type="hidden" data-cookie-customDialogSelector='null' data-cookie-colorText='#424a4d' data-cookie-colorBg='rgba(234, 239, 241, 0.99)' data-cookie-textButton='Agree' data-cookie-colorButton='' data-cookie-colorLink='#424a4d' data-cookie-underlineLink='true' data-cookie-text="We use cookies to give you the best experience. Read our <a href='privacy.html'>cookie policy</a>.">
