--- a/page11.html
+++ b/page11.html
@@ -63,7 +63,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="index.html">
-                        <img src="assets/images/logo-300px-no-border-165x147.png" alt="Mobirise" title="" style="height: 4.6rem;">
+                        <img src="assets/images/logo-300px-no-border-165x147.png" alt="Mobirise" title="" style="height: 5rem;">
                     </a>
                 </span>
                 
@@ -71,7 +71,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-7" href="7-steps.html"><strong>7 Step Process</strong></a> <a class="btn btn-sm btn-primary display-7" href="page11.html"><strong>20 Responsibility Issues</strong><strong></strong></a> <a class="btn btn-sm btn-primary display-7" href="about.html"><strong>About</strong></a> <a class="btn btn-sm btn-secondary display-7" href="get-started.html"><strong>Get Started</strong></a></div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-7" href="7-steps.html"><strong>7 Step Process</strong></a> <a class="btn btn-sm btn-primary display-7" href="page11.html">20 Responsibility Issues<strong></strong></a> <a class="btn btn-sm btn-primary display-7" href="about.html"><strong>About</strong></a> <a class="btn btn-sm btn-success display-7" href="get-started.html"><strong>Get Started</strong></a></div>
         </div>
     </nav>
 </section>
@@ -244,7 +244,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/h" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Mobirise website software - <a href="https://mobirise.site/n" style="color:#aaa;">Go now</a></p></section><script src="assets/popper/popper.min.js"></script>  <script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/q" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Create a free <a href="https://mobirise.site/y" style="color:#aaa;">website</a> with Mobirise</p></section><script src="assets/popper/popper.min.js"></script>  <script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
